# MathBotBackend

./: .gitignore  CMakeLists.txt  README.md  main.cpp  math_bot_config.h  query_processor.cpp  query_processor.h
benchmark/: length_benchmark.cpp  length_benchmark.h  newton_benchmark.cpp  newton_benchmark.h
data/: basic_tree.json  only_GA_tree.json  only_implemented_tree.json  tree_format_description.txt  tree_with_custom_start.json
optimizing/: OptimizationBlock.h  OptimizationTree.cpp  OptimizationTree.h  OptimizationTreeWrapper.cpp  OptimizationTreeWrapper.h  base_optimizer.cpp  combi_optimizer.cpp  combi_optimizer.h  optimize_combiner.cpp  optimize_combiner.h  optimize_query_processor.cpp  optimize_query_processor.h  optimizer.cpp  optimizer.h
optimizing/nodes/: GA_OptimizationBlock.cpp  GA_OptimizationBlock.h
optimizing/optimization_blocks/: GA_OptimizationBlock.cpp  GA_OptimizationBlock.h  GD_OptimizationBlock.cpp  GD_OptimizationBlock.h  Newton_OptimizationBlock.cpp  Newton_OptimizationBlock.h
plotting/: plot_manager.h
solving/: solver.h
tests/: other_tests.h
tests/optimization_tree_tests/: only_GA_test.h  parsing_tests.h  raw_optimization_tree_test.h
tree_schemas/: GDs_with_learning_rates.json  basic_tree.json  tree_with_custom_start.json
utils/: genome_simple_utils.h  rounding.cpp  rounding.h  sequence_plotter.h
